tests/ui/ptr_missing_unsafe.stderr
error: pointer argument requires that the function be marked unsafe
 --> tests/ui/ptr_missing_unsafe.rs:6:27
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
6 |         fn not_unsafe_ptr(c: *mut C);
  |                           ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
